--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
 /*  your css code here. If applicable */
+button{
+	radius:10;
+	height:50px;
+	background-color:red;
+	color:white;
+	size: 50px;
+}
