--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,21 @@ button{
 	color:white;
 	size: 50px;
 }
+div{
+	background-color:#f5f5f5;
+	width:50%;
+	padding: 50px;
+	margin-left:20%;
+	align-items:center;
+	justify-content:center;
+	text-align:center;
+}
+#btn{
+	text-style:bold;
+	border:none;
+	border-radius:20%;
+	width:30%;
+	height:60px;
+	font-size:20px;
+	font-weight:bold;
+}
